--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,1 +1,1 @@
-<connected-onboards-summary [disableLinks]="true"></connected-onboards-summary>
+<connected-onboards-summary></connected-onboards-summary>
