--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,1 +1,4 @@
-<connected-onboards-summary></connected-onboards-summary>
+<div class="relative h-128 overflow-y-auto" style="border: 1px solid red">
+    <line-chart class="h-64" [inputData]="data" [hideDetails]="false" yAxisName="trains"
+        xAxisName="time"></line-chart>
+</div>
