--- a/src/app/components/line-chart/line-chart.component.html
+++ b/src/app/components/line-chart/line-chart.component.html
@@ -1,6 +1,4 @@
-<div *ngIf="isLoading" class="h-full flex items-center justify-center">
-    <ix-spinner size="large"></ix-spinner>
-</div>
+<ix-spinner *ngIf="isLoading" size="large"></ix-spinner>
 <div *ngIf="!isLoading" class="h-full" echarts [options]="options" [merge]="updateOptions"></div>
 <p>isLoading: {{ isLoading | json }}</p>
 <p>This line chart renders with siemens/ix-echarts ^1.6.0 but not ^2.3.0</p>
