--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-@import 'tailwindcss/base';
+@import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
 
 body {
     height: 100vh;
